blockml/test/valid/15_reference_view/v45/k1.view
view: k1
table: mprove-data.segment_javascript.tracks
fields:
- dimension: dim1
  sql: 111