blockml/test/errors/03_view/e295/e295.view
view: e295
derived_table: |
  'SELECT * FROM ...'
permanent: true  
pdt_trigger_time: '* * * * * *'
fields:
- dimension: dim1
  sql: 111



